# fastfoodgo-devops-project

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  commande.py
tests/: __init__.py  test_commande.py
